# LaboratorioProgrammazione

./: Activity.cpp  Activity.h  CMakeLists.txt  CollectionLists.cpp  CollectionLists.h  Date.cpp  Date.h  List.cpp  List.h  ListaMemo.cpp  ListaMemo.h  Promemoria.cpp  Promemoria.h  README.md  main.cpp
tests/: CMakeLists.txt  CollectionTest.cpp  DateTest.cpp  ListTest.cpp  MemoTest.cpp  mainTest.cpp
